🎨 Fix styles for selector text overlapping arrow

--- a/src/styles/_css-variables.scss
+++ b/src/styles/_css-variables.scss
@@ -3,6 +3,7 @@
 	--grey: #{$grey};
 	--grey-tint: #{$grey-tint};
 	--white: #{$white};
+	--white-rgb: 255, 255, 255;
 	--primary-color-darkest: #{$primary-color-darkest};
 	--primary-color-dark: #{$primary-color-dark};
 	--primary-color: #{$primary-color};
